--- a/rep/pyproject.toml
+++ b/rep/pyproject.toml
@@ -8,12 +8,9 @@ authors = ["Akhmetov Aslan <lib.ballmerpeak@gmail.com>"]
 python = "^3.8"
 requests = "^2.25.1"
 DateTime = "^4.3"
-mysql = "^0.0.2"
-mysql-connector = "^2.2.9"
 bs4 = "^0.0.1"
 lxml = "^4.6.2"
-threading2 = "^0.3.1"
-pendulum = "^2.1.2"
+telebot = "^0.0.4"
 
 [tool.poetry.dev-dependencies]
 
